tidy up the dockerfile - one language per layer

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -10,25 +10,31 @@ RUN groupadd --gid ${USER_GID} ${USERNAME} \
 && echo ${USERNAME} ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/${USERNAME} \
 && chmod 0440 /etc/sudoers.d/${USERNAME}
 
+# ---
+# Install ...
+# ---
+
+# Basic development tools
 RUN dnf -y --setopt=install_weak_deps=False install \
     git \
-    which \
-&& dnf -y install \
+    which
+
+# Python
+RUN dnf -y install \
     python \
     python-pip \
-    python-pytest \
-    clang
+    python-pytest
 
+# Rust
 ENV RUSTUP_HOME=/opt/rustup \
     CARGO_HOME=/opt/cargo \
     PATH=/opt/cargo/bin:$PATH
 RUN dnf -y install \
+    clang \
     rustup \
 && rustup-init -v -y \
 && rustup component add rust-src
 
-# # Stuff to delete later
-# && dnf -y clean all
-# && ln -s /usr/lib/rustlib/x86_64-unknown-linux-gnu/lib /usr/lib/rustlib/src/rust/library
-
+# ---
+# Set the default user
 USER ${USERNAME}
