--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -11,6 +11,6 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build
-      run: cargo build rust --verbose --manifest-path rust/Cargo.toml
+      run: cargo build --verbose --manifest-path rust/Cargo.toml
     - name: Run tests
-      run: cargo test rust --verbose --manifest-path rust/Cargo.toml
+      run: cargo test --verbose --manifest-path rust/Cargo.toml
