use native testing UI in vscode

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -23,6 +23,7 @@
                 "python.testing.pytestArgs": [
                     "python"
                 ],
+                "testExplorer.useNativeTesting": true,
                 "terminal.integrated.defaultProfile.linux": "bash", 
                 "terminal.integrated.profiles.linux": {
                     "bash": {
