revert test extension changes (last 2 commits)

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,36 +3,26 @@
         "dockerfile": "Dockerfile"
     },
 
-    // "forwardPorts": [8000],
+    "forwardPorts": [8000],
 
     "customizations": {
         "vscode": {
             "extensions": [
-                // python
                 "ms-python.python",
                 "ms-python.vscode-pylance",
                 "charliermarsh.ruff",
-                // rust
+                "DavidAnson.vscode-markdownlint",
+                "tamasfe.even-better-toml",
                 "rust-lang.rust-analyzer",
                 "andrewbrey.rust-test-highlight",
-                "Swellaby.vscode-rust-test-adapter",
-                // configs, docs etc.
-                "DavidAnson.vscode-markdownlint",
-                "tamasfe.even-better-toml"
+                "Swellaby.vscode-rust-test-adapter"
             ],
             "settings": {
-                // python
                 "python.defaultInterpreterPath": "/usr/bin/python3",
                 "python.testing.pytestEnabled": true,
                 "python.testing.pytestArgs": [
                     "python"
                 ],
-                // rust
-                "testExplorer.useNativeTesting": true,
-                "rust-analyzer.linkedProjects": [
-                    "./rust/Cargo.toml"
-                ],
-                // shell
                 "terminal.integrated.defaultProfile.linux": "bash", 
                 "terminal.integrated.profiles.linux": {
                     "bash": {
