rust analyser integrated into test explorer (a little flaky, but that's on the rust-a side)

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,6 +14,10 @@
                 "andrewbrey.rust-test-highlight"
             ],
             "settings": {
+                // rust
+                "rust-analyzer.interpret.tests": true,
+                "rust-analyzer.testExplorer": true,
+                // shell
                 "terminal.integrated.defaultProfile.linux": "bash", 
                 "terminal.integrated.profiles.linux": {
                     "bash": {
