Revert "remove python fizzbuzz"
This reverts commit b5b648c2dbbca91c07f52b7d5b66e7b7b5c69aea.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,6 +8,9 @@
     "customizations": {
         "vscode": {
             "extensions": [
+                "ms-python.python",
+                "ms-python.vscode-pylance",
+                "charliermarsh.ruff",
                 "DavidAnson.vscode-markdownlint",
                 "tamasfe.even-better-toml",
                 "rust-lang.rust-analyzer",
@@ -17,6 +20,12 @@
                 // rust
                 "rust-analyzer.interpret.tests": true,
                 "rust-analyzer.testExplorer": true,
+                // python
+                "python.defaultInterpreterPath": "/usr/bin/python3",
+                "python.testing.pytestEnabled": true,
+                "python.testing.pytestArgs": [
+                    "python"
+                ],
                 // shell
                 "terminal.integrated.defaultProfile.linux": "bash", 
                 "terminal.integrated.profiles.linux": {
