Revert "move rust fizzbuzz to root"
This reverts commit 7b6972a845de136743e9bbaccf7f757f5257a570.
and adds the required setting in devcontainer.json

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,6 +20,9 @@
                 // rust
                 "rust-analyzer.interpret.tests": true,
                 "rust-analyzer.testExplorer": true,
+                "rust-analyzer.linkedProjects": [
+                    "./rust/Cargo.toml"
+                ],
                 // python
                 "python.defaultInterpreterPath": "/usr/bin/python3",
                 "python.testing.pytestEnabled": true,
