fixup: only run rust.yml for rust changes

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -5,7 +5,7 @@ on:
     paths: 
     - "**.rs"
     - "Cargo.toml"
-    - ".github/worksflows/rust.yml"
+    - ".github/workflows/rust.yml"
   pull_request:
 
 env:
