--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -33,5 +33,12 @@
                 }
             }
         }
+    },
+    "updateContentCommand": {
+        "rust": "cargo test -v",
+        "python": "./setup-py.sh"
+    },
+    "postAttachCommand": {
+        "python": ". .venv/bin/activate"
     }
 }
