explicit packaging in src structure

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ Issues = "https://github.com/MusicalNinjaDad/fizzbuzz/issues"
 version = {file = "__version__"}
 
 [tool.setuptools.packages.find]
-where = ["."]
+where = ["src"]
 
 [project.optional-dependencies]
 dev = [
