add a ruler at 120 chars

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -30,7 +30,11 @@
                     "bash": {
                         "path": "/usr/bin/bash"
                     }
-                }
+                },
+                // editor
+                "editor.rulers": [
+                    120
+                ]
             }
         }
     },
