--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,6 +1,12 @@
 name: Rust
 
-on: [push, pull_request]
+on:
+  push:
+    paths: 
+    - "**.rs"
+    - "Cargo.toml"
+    - ".github/workflows/rust.yml"
+  pull_request:
 
 env:
     CARGO_TERM_COLOR: always
