--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,11 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+name = "fizzbuzzo3"
+path = "src/lib.rs"
+crate-type = ["cdylib", "rlib"]  # required for shared library for Python to import from.
+
 [dependencies]
 
 [dev-dependencies]
