--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,17 @@
 [package]
 name = "fizzbuzz"
-version = "0.1.1"
+version = "0.2.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [lib]
 name = "fizzbuzzo3"
 path = "src/lib.rs"
-crate-type = ["cdylib", "rlib"]  # required for shared library for Python to import from.
+crate-type = ["cdylib", "rlib"]  # cdylib required for python import, rlib required for rust tests.
 
 [dependencies]
 pyo3 = "0.20.3"
 
 [dev-dependencies]
 googletest = "0.11.0"
+
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
