--- a/fizzbuzzo3/Cargo.toml
+++ b/fizzbuzzo3/Cargo.toml
@@ -14,5 +14,6 @@ fizzbuzz = { path = "../fizzbuzz" }
 
 [dev-dependencies]
 googletest = "0.11.0"
+serial_test = "1.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
