enable container rebuild when tests are failing

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -39,7 +39,7 @@
         }
     },
     "updateContentCommand": {
-        "rust": "cargo test -v",
+        "rust": "cargo test -v || true",
         "python": "./setup-py.sh"
     },
     "postAttachCommand": {
