--- a/fizzbuzzo3/Cargo.toml
+++ b/fizzbuzzo3/Cargo.toml
@@ -9,7 +9,7 @@ path = "src/lib.rs"
 crate-type = ["cdylib"]  # cdylib required for python import, rlib required for rust tests.
 
 [dependencies]
-pyo3 = "0.20.3"
+pyo3 = { version = "0.21.0-beta.0" }
 fizzbuzz = { path = "../fizzbuzz" }
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
