--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -20,3 +20,6 @@ updates:
   directory: "/"
   schedule:
     interval: "daily"
+  ignore:
+  - dependency-name: "codecov/codecov-action"
+    versions: "4"
