--- a/pyo3testing/Cargo.toml
+++ b/pyo3testing/Cargo.toml
@@ -12,3 +12,4 @@ crate-type = ["rlib"]  # cdylib required for python import, rlib required for ru
 pyo3 = "0.21.0-beta.0"
 quote = "1.0.35"
 proc-macro2 = "1.0.74"
+syn = "2.0.55"
