--- a/fizzbuzzo3/Cargo.toml
+++ b/fizzbuzzo3/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "fizzbuzzo3"
-version = "0.1.0"
+version = "1.0.0"
 edition = "2021"
 
 [lib]
@@ -10,6 +10,6 @@ crate-type = ["cdylib"]  # cdylib required for python import, rlib required for 
 
 [dependencies]
 pyo3 = { path = "../pyo3" }
-fizzbuzz = { path = "../fizzbuzz" }
+fizzbuzz = { path = "../fizzbuzz", version = "1.0.0"}
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
