change pyo3-testing to a git dependency not a submodule

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -7,6 +7,7 @@ on:
     - "Cargo.toml"
     - ".github/workflows/rust.yml"
   pull_request:
+  workflow_call: 
 
 env:
     CARGO_TERM_COLOR: always
@@ -16,8 +17,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-      with:
-        submodules: true
     - name: Build
       run: cargo build --verbose
     - name: Run tests
@@ -27,8 +26,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-      with:
-        submodules: true
     - name: fmt
       run: cargo fmt --check
     - name: clippy
