--- a/.github/workflows/deploy-rust.yml
+++ b/.github/workflows/deploy-rust.yml
@@ -15,7 +15,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - name: Deploy to ADO
+    - name: Login to ADO
       env:
-        ADO_TOKEN: ${{ secrets.ADO_TOKEN }}
+        PAT: ${{ secrets.ADO_TOKEN }}
+      run: echo -n Basic $(echo -n PAT:$PAT | base64) | cargo login --registry FizzBuzz
+    - name: Publish to ADO
       run: cargo publish --package fizzbuzz --registry FizzBuzz --token "$ADO_TOKEN"
