Revert "change pyo3-testing to a git dependency not a submodule"
This reverts commit a270b5212b8e3b1db421497fb40a632403dc9164.

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -7,7 +7,6 @@ on:
     - "Cargo.toml"
     - ".github/workflows/rust.yml"
   pull_request:
-  workflow_call: 
 
 env:
     CARGO_TERM_COLOR: always
@@ -17,6 +16,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+      with:
+        submodules: true
     - name: Build
       run: cargo build --verbose
     - name: Run tests
@@ -26,6 +27,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+      with:
+        submodules: true
     - name: fmt
       run: cargo fmt --check
     - name: clippy
