don't use crates.io version of fizzbuzz

--- a/fizzbuzzo3/Cargo.toml
+++ b/fizzbuzzo3/Cargo.toml
@@ -10,6 +10,6 @@ crate-type = ["cdylib"]  # cdylib required for python import, rlib required for 
 
 [dependencies]
 pyo3 = { path = "../pyo3" }
-fizzbuzz = { path = "../fizzbuzz", version = "1.0.0"}
+fizzbuzz = { path = "../fizzbuzz" }
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
