--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -9,7 +9,9 @@ on:
       - "**.py"
       - "pyproject.toml"
       - ".github/workflows/python.yml"
+      tags-ignore: "rust-v*"
     pull_request:
+    workflow_call:
 
 jobs:
   test:
