--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -6,7 +6,9 @@ on:
     - "**.rs"
     - "Cargo.toml"
     - ".github/workflows/rust.yml"
+    tags-ignore: "rust-v*"
   pull_request:
+  workflow_call:
 
 env:
     CARGO_TERM_COLOR: always
