use CARGO_LOGIN_TOKEN env variable

--- a/.github/workflows/deploy-rust.yml
+++ b/.github/workflows/deploy-rust.yml
@@ -28,7 +28,7 @@ jobs:
         cargo package -p fizzbuzz
     - name: Login to ADO
       env:
-        PAT: ${{ secrets.ADO_TOKEN }}
-      run: cargo login --registry FizzBuzz --token "$PAT" 
+        CARGO_LOGIN_TOKEN: ${{ secrets.ADO_TOKEN }}
+      run: cargo login --registry FizzBuzz
     - name: Publish to ADO
       run: cargo publish --package fizzbuzz --registry FizzBuzz
