--- a/.github/workflows/deploy-python.yml
+++ b/.github/workflows/deploy-python.yml
@@ -25,6 +25,7 @@ jobs:
     name: Build wheels on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
         # macos-13 is an intel runner, macos-14 is apple silicon
         os: [ubuntu-latest, windows-latest, macos-13, macos-14]
@@ -34,6 +35,9 @@ jobs:
         uses: pypa/cibuildwheel@v2.17.0
         env:
           CIBW_CONFIG_SETTINGS: "--build-option=--py-limited-api=cp38"
+          CIBW_BEFORE_ALL_LINUX: "yum install -y rust cargo"
+          CIBW_BEFORE_ALL_MACOS: "brew install -y rust"
+          CIBW_BEFORE_ALL_WINDOWS: "choco install -y rust"
         # with:
         #   package-dir: .
         #   output-dir: wheelhouse
