--- a/.github/workflows/deploy-python.yml
+++ b/.github/workflows/deploy-python.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.17.0
         env:
-          CIBW_CONFIG_SETTINGS: "--build-option=--py-limited-api=cp38"
+          # CIBW_CONFIG_SETTINGS: "--build-option=--py-limited-api=cp38"
           CIBW_BEFORE_ALL_LINUX: "yum install -y rust cargo"
           CIBW_BEFORE_ALL_MACOS: "brew install -y rust"
           CIBW_BEFORE_ALL_WINDOWS: "choco install -y rust"
