--- a/.github/workflows/deploy-python.yml
+++ b/.github/workflows/deploy-python.yml
@@ -36,7 +36,7 @@ jobs:
         env:
           # CIBW_CONFIG_SETTINGS: "--build-option=--py-limited-api=cp38"
           CIBW_BEFORE_ALL_LINUX: "yum install -y rust cargo"
-          CIBW_BEFORE_ALL_MACOS: "brew install -y rust"
+          CIBW_BEFORE_ALL_MACOS: "brew install rust"
           CIBW_BEFORE_ALL_WINDOWS: "choco install -y rust"
         # with:
         #   package-dir: .
