--- a/.github/workflows/deploy-python.yml
+++ b/.github/workflows/deploy-python.yml
@@ -33,12 +33,12 @@ jobs:
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.17.0
         env:
-          # CIBW_CONFIG_SETTINGS: "--build-option=--py-limited-api=cp38"
+          # CIBW_CONFIG_SETTINGS: "--build-option=--py-limited-api=cp38" # speeds up process at cost of less specific wheels
           CIBW_BEFORE_ALL_LINUX: "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --profile minimal"
           CIBW_BEFORE_ALL_MACOS: "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --profile minimal"
           CIBW_BEFORE_ALL_WINDOWS: "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --target i686-pc-windows-gnu --profile minimal"
-          CIBW_ENVIRONMENT_LINUX: PATH="$HOME/.cargo/bin:$PATH"
-          CIBW_SKIP: "*-musllinux_i686"
+          CIBW_ENVIRONMENT_LINUX: PATH="$HOME/.cargo/bin:$PATH" # other OS directly update environment from rustup.sh
+          CIBW_SKIP: "*-musllinux_i686" # No musllinux-i686 rust compiler available.
         # with:
         #   package-dir: .
         #   output-dir: wheelhouse
