--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,13 @@ path = "fizzbuzzo3/Cargo.toml"      # Default value, can be omitted
 binding = "PyO3"         # Default value, can be omitted
 features = ["pyo3/extension-module"]
 
+[tool.cibuildwheel]
+skip = "*-musllinux_i686" # No musllinux-i686 rust compiler available.
+linux.before-all = "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --profile minimal"
+linux.environment = { PATH="$HOME/.cargo/bin:$PATH" }
+macos.before-all = "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --profile minimal"
+windows.before-all = "rustup target add aarch64-pc-windows-msvc i586-pc-windows-msvc i686-pc-windows-msvc x86_64-pc-windows-msvc"
+
 [project.optional-dependencies]
 dev = [
     "black",
