--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,8 +42,12 @@ features = ["pyo3/extension-module"]
 
 [tool.cibuildwheel]
 skip = "*-musllinux_i686" # No musllinux-i686 rust compiler available.
-linux.before-all = "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --profile minimal"
+linux.before-all = [
+    "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --profile minimal",
+    "rustup target add all",
+]
 linux.environment = { PATH="$HOME/.cargo/bin:$PATH" }
+linux.archs = "all"
 macos.before-all = "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --profile minimal"
 windows.before-all = "rustup target add aarch64-pc-windows-msvc i586-pc-windows-msvc i686-pc-windows-msvc x86_64-pc-windows-msvc"
 
