--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,15 +45,22 @@ skip = [
     "*-musllinux_i686", # No musllinux-i686 rust compiler available.
     "*-musllinux_ppc64le", 
 ]
+
+[tool.cibuildwheel.linux]
+before-all = [
     "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --profile minimal",
     "rustup target add all",
 ]
-linux.environment = { PATH="$HOME/.cargo/bin:$PATH" }
-linux.archs = "all"
-macos.before-all = "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --profile minimal"
-windows.before-all = "rustup target add aarch64-pc-windows-msvc i586-pc-windows-msvc i686-pc-windows-msvc x86_64-pc-windows-msvc"
-windows.before-build = "pip install delvewheel"
-windows.repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"
+environment = { PATH="$HOME/.cargo/bin:$PATH" }
+archs = "all"
+
+[tool.cibuildwheel.macos]
+before-all = "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --profile minimal"
+
+[tool.cibuildwheel.windows]
+before-all = "rustup target add aarch64-pc-windows-msvc i586-pc-windows-msvc i686-pc-windows-msvc x86_64-pc-windows-msvc"
+before-build = "pip install delvewheel"
+repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"
 
 [project.optional-dependencies]
 dev = [
