required target architecture always present in default install of rust

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,10 +48,7 @@ skip = [
 ]
 
 [tool.cibuildwheel.linux]
-before-all = [
-    "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --profile minimal",
-    "rustup target add x86_64-unknown-linux-gnu i686-unknown-linux-gnu aarch64-unknown-linux-gnu powerpc64le-unknown-linux-gnu s390x-unknown-linux-gnu x86_64-unknown-linux-musl i686-unknown-linux-musl aarch64-unknown-linux-musl",
-]
+before-all = "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --profile minimal"
 environment = { PATH="$HOME/.cargo/bin:$PATH" }
 archs = "all"
 
