--- a/.github/workflows/deploy-python.yml
+++ b/.github/workflows/deploy-python.yml
@@ -19,8 +19,7 @@ jobs:
       with:
         python-version: 3.9
     - name: Test fizzbuzzo3
-      run: cargo test --package fizzbuzzo3
-
+      run: cargo test --workspace
 
   wheels:
     name: Build wheels on ${{ matrix.os }}
