--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -9,7 +9,11 @@ on:
       - "**.py"
       - "pyproject.toml"
       - ".github/workflows/python.yml"
+      tags-ignore:
+      - "rust-v*"
+      - "python-v*"
     pull_request:
+    workflow_call:
 
 jobs:
   test:
@@ -28,8 +32,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-      with:
-        submodules: true
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
       with:
