--- a/fizzbuzzo3/Cargo.toml
+++ b/fizzbuzzo3/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "fizzbuzzo3"
-version = "0.1.0"
+version = "1.0.0"
 edition = "2021"
 
 [lib]
@@ -9,7 +9,7 @@ path = "src/lib.rs"
 crate-type = ["cdylib"]  # cdylib required for python import, rlib required for rust tests.
 
 [dependencies]
-pyo3 = { path = "../pyo3" }
+pyo3 = { git = "https://github.com/MusicalNinjaDad/pyo3.git", branch = "pyo3-testing" }
 fizzbuzz = { path = "../fizzbuzz" }
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
