--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,8 @@ build-backend = "setuptools.build_meta"
 name = "fizzbuzz"
 description = "An implementation of the traditional fizzbuzz kata"
 # readme = "README.md"
-license = {text = "MIT"}
-authors = [{name = "Mike Foster"}]
+license = { text = "MIT" }
+authors = [{ name = "Mike Foster" }]
 dynamic = ["version"]
 requires-python = ">=3.8"
 classifiers = [
@@ -27,32 +27,32 @@ Issues = "https://github.com/MusicalNinjaDad/fizzbuzz/issues"
 # Changelog = "https://github.com/MusicalNinjaDad/recurtools/blob/main/CHANGELOG.md"
 
 [tool.setuptools.dynamic]
-version = {file = "__pyversion__"}
+version = { file = "__pyversion__" }
 
 [tool.setuptools.packages.find]
 where = ["fizzbuzzpy"]
 
 [[tool.setuptools-rust.ext-modules]]
 # Private Rust extension module to be nested into the Python package
-target = "fizzbuzzo3"  # The last part of the name (e.g. "_lib") has to match lib.name in Cargo.toml,
-                             # but you can add a prefix to nest it inside of a Python package.
-path = "fizzbuzzo3/Cargo.toml"      # Default value, can be omitted
-binding = "PyO3"         # Default value, can be omitted
+target = "fizzbuzzo3" # The last part of the name (e.g. "_lib") has to match lib.name in Cargo.toml,
+# but you can add a prefix to nest it inside of a Python package.
+path = "fizzbuzzo3/Cargo.toml"       # Default value, can be omitted
+binding = "PyO3"                     # Default value, can be omitted
 features = ["pyo3/extension-module"]
 
 [tool.cibuildwheel]
 skip = [
-    "*-musllinux_i686", # No musllinux-i686 rust compiler available.
+    "*-musllinux_i686",    # No musllinux-i686 rust compiler available.
     "*-musllinux_ppc64le", # no rust target available.
-    "*-musllinux_s390x", # no rust target available.
+    "*-musllinux_s390x",   # no rust target available.
 ]
 
 [tool.cibuildwheel.linux]
 before-all = "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --profile minimal"
-environment = { PATH="$HOME/.cargo/bin:$PATH" }
+environment = { PATH = "$HOME/.cargo/bin:$PATH" }
 archs = "all"
 test-command = "pytest {package}"
-test-extras = "dev"
+test-extras = "test"
 
 [tool.cibuildwheel.macos]
 before-all = "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --profile minimal"
@@ -63,15 +63,12 @@ before-build = "pip install delvewheel"
 repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"
 
 [project.optional-dependencies]
-dev = [
-    "black",
-    "pytest",
-    "pytest-doctest-mkdocstrings",
-    "ruff",
-    ]
+lint = ["ruff"]
+test = ["pytest", "pytest-doctest-mkdocstrings"]
+dev = ["fizzbuzz[lint,test]"]
 
 [tool.pytest.ini_options]
-xfail_strict=true
+xfail_strict = true
 addopts = [
     "--doctest-modules",
     "--doctest-mdcodeblocks",
@@ -79,8 +76,8 @@ addopts = [
 ]
 
 [tool.coverage.run]
-branch=true
-omit=["test_*"]
+branch = true
+omit = ["test_*"]
 dynamic_context = "test_function"
 
 [tool.ruff]
@@ -93,34 +90,34 @@ select = ["ALL"]
 flake8-pytest-style.fixture-parentheses = false
 flake8-annotations.mypy-init-return = true
 extend-ignore = [
-    "E701", # One-line ifs are not great, one-liners with suppression are worse
+    "E701",   # One-line ifs are not great, one-liners with suppression are worse
     "ANN101", # Type annotation for `self`
     "ANN202", # Return type annotation for private functions
     "ANN401", # Using Any often enough that supressing individually is pointless
-    "W291", # Double space at EOL is linebreak in md-docstring
-    "W292", # Too much typing to add newline at end of each file
-    "W293", # Whitespace only lines are OK for us
-    "D401", # First line of docstring should be in imperative mood ("Returns ..." is OK, for example)
-    "D203", # 1 blank line required before class docstring (No thank you, only after the class docstring)
-    "D212", # Multi-line docstring summary should start at the first line (We start on new line, D209)
-    "D215", # Section underline is over-indented (No underlines)
-    "D400", # First line should end with a period (We allow any punctuation, D415)
-    "D406", # Section name should end with a newline (We use a colon, D416)
-    "D407", # Missing dashed underline after section (No underlines)
-    "D408", # Section underline should be in the line following the section's name (No underlines)
-    "D409", # Section underline should match the length of its name (No underlines)
-    "D413", # Missing blank line after last section (Not required)
-    ]
+    "W291",   # Double space at EOL is linebreak in md-docstring
+    "W292",   # Too much typing to add newline at end of each file
+    "W293",   # Whitespace only lines are OK for us
+    "D401",   # First line of docstring should be in imperative mood ("Returns ..." is OK, for example)
+    "D203",   # 1 blank line required before class docstring (No thank you, only after the class docstring)
+    "D212",   # Multi-line docstring summary should start at the first line (We start on new line, D209)
+    "D215",   # Section underline is over-indented (No underlines)
+    "D400",   # First line should end with a period (We allow any punctuation, D415)
+    "D406",   # Section name should end with a newline (We use a colon, D416)
+    "D407",   # Missing dashed underline after section (No underlines)
+    "D408",   # Section underline should be in the line following the section's name (No underlines)
+    "D409",   # Section underline should match the length of its name (No underlines)
+    "D413",   # Missing blank line after last section (Not required)
+]
 
 [tool.ruff.lint.per-file-ignores]
 # Additional ignores for tests 
 "**/test_*.py" = [
-    "INP001", # Missing __init__.py
-    "ANN", # Missing type annotations
-    "S101", # Use of `assert`
+    "INP001",  # Missing __init__.py
+    "ANN",     # Missing type annotations
+    "S101",    # Use of `assert`
     "PLR2004", # Magic number comparisons are OK in tests
-    "D1", # Don't REQUIRE docstrings for tests - but they are nice
-    ]
+    "D1",      # Don't REQUIRE docstrings for tests - but they are nice
+]
 
 "**/__init__.py" = [
     "D104", # Don't require module docstring in __init__.py
