why is the pipeline not running?

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -6,9 +6,9 @@ on:
     - "**.rs"
     - "Cargo.toml"
     - ".github/workflows/rust.yml"
-    tags-ignore:
-    - "rust-v*"
-    - "python-v*"
+    # tags-ignore:
+    # - "rust-v*"
+    # - "python-v*"
   pull_request:
   workflow_call:
 
