remove pyo3-core related stuff from devcontainer, align to MusicalNinjas/devcontainers-pyo3

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -53,18 +53,9 @@ RUN dnf -y install \
     python3-devel \
     rustup \
 && rustup-init -v -y \
-&& rustup component add rust-src
-
-# pyo3 specifics
-RUN dnf -y install \
-    nox \
-    openssl-devel \
-&& cargo install cargo-llvm-cov \
-&& rustup component add llvm-tools-preview \
+&& rustup component add rust-src \
 && cargo install mdbook \
-&& cargo install cargo-expand \
-&& cargo install lychee
-
+&& cargo install cargo-expand
 
 # ---
 # Final setup steps
@@ -72,7 +63,7 @@ RUN dnf -y install \
 
 # Create the default user - most agents mount workspace directory chowned to 1000:1000
 # and chown CARGO_HOME and RUSTUP_HOME to the default user 
-ARG USERNAME=fizzbuzz
+ARG USERNAME=pyo3
 ARG USER_UID=1000
 ARG USER_GID=${USER_UID}
 RUN groupadd --gid ${USER_GID} ${USERNAME} \
