--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,8 +1,10 @@
 {
     "build": {
-        "dockerfile": "Dockerfile"
+        "dockerfile": "Dockerfile",
+        "args": {
+            "USERNAME": "fizzbuzz"
+        }
     },
-
     "customizations": {
         "vscode": {
             "extensions": [
@@ -21,26 +23,32 @@
                 // rust
                 "rust-analyzer.interpret.tests": true,
                 "rust-analyzer.testExplorer": true,
+                "[rust]": {
+                    "editor.rulers": [
+                        100
+                    ]
+                },
                 // python
                 "python.defaultInterpreterPath": "./.venv/bin/python3",
                 "python.testing.pytestEnabled": true,
+                "[python]": {
+                    "editor.rulers": [
+                        120
+                    ]
+                },
                 // shell
-                "terminal.integrated.defaultProfile.linux": "bash", 
+                "terminal.integrated.defaultProfile.linux": "bash",
                 "terminal.integrated.profiles.linux": {
                     "bash": {
                         "path": "/usr/bin/bash"
                     }
-                },
-                // editor
-                "editor.rulers": [
-                    120
-                ]
+                }
             }
         }
     },
     "updateContentCommand": {
-        "rust": "cargo test -v || true",
-        "python": "./setup-py.sh"
+        "rust": ".devcontainer/check-rust.sh",
+        "python": ".devcontainer/setup-py.sh"
     },
     "postAttachCommand": {
         "python": ". .venv/bin/activate"
