--- a/fizzbuzz/Cargo.toml
+++ b/fizzbuzz/Cargo.toml
@@ -1,12 +1,15 @@
 [package]
 name = "fizzbuzz"
-version = "2.0.0"
+version = "2.1.0"
 edition = "2021"
 
 [lib]
 name = "fizzbuzz"
 path = "src/lib.rs"
 crate-type = ["rlib"]  # cdylib required for python import, rlib required for rust tests.
+
+[dependencies]
+rayon = "1.10.0"
 
 [dev-dependencies]
 googletest = "0.11.0"
