use online devcontainer (test to see if pylance is better)

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,10 +1,11 @@
 {
-    "build": {
-        "dockerfile": "Dockerfile",
-        "args": {
-            "USERNAME": "fizzbuzz"
-        }
-    },
+    "image": "ghcr.io/musicalninjas/pyo3-devcontainer:latest",
+    // "build": {
+    //     "dockerfile": "Dockerfile",
+    //     "args": {
+    //         "USERNAME": "fizzbuzz"
+    //     }
+    // },
     "customizations": {
         "vscode": {
             "extensions": [
