Revert "use online devcontainer (test to see if pylance is better)"
This reverts commit b2e54a8f22d3ec05f9298bf649aaa19db025a685.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,11 +1,10 @@
 {
-    "image": "ghcr.io/musicalninjas/pyo3-devcontainer:latest",
-    // "build": {
-    //     "dockerfile": "Dockerfile",
-    //     "args": {
-    //         "USERNAME": "fizzbuzz"
-    //     }
-    // },
+    "build": {
+        "dockerfile": "Dockerfile",
+        "args": {
+            "USERNAME": "fizzbuzz"
+        }
+    },
     "customizations": {
         "vscode": {
             "extensions": [
